--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.1"
